# Moodtape

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  IMPROVED_SCORING_README.md  LICENSE  PERSONALIZED_ENGINE_README.md  README.md  RENDER_DOCKER_SETUP.md  SMART_SEARCH_FIXES_SUMMARY.md  SMART_SEARCH_README.md  SMART_SEARCH_SUMMARY.md  docker-compose.yml  env.example  pyproject.toml  run_tests.sh  test_fallback_logic.py  test_fix.py  test_personalized_engine.py  test_spotify_diagnosis.py
.Cursor /: file_structure_document.md  tech_stack_document.md
Docs/: deployment.md  implementation_plan.md  prd.md  railway_setup.md
auth/: __init__.py  apple_auth.py  spotify_auth.py
bot/: __init__.py  main.py
bot/handlers/: admin.py  auth.py  feedback.py  mood.py  preferences.py  start.py
bot/middleware/: error_handler.py  rate_limiter.py
config/: production.py  settings.py
moodtape_core/: __init__.py  gpt_parser.py  improved_scoring.py  personalization.py  personalized_engine.py  playlist_builder.py  smart_search.py
scripts/: check_spotify_status.py  extract_token_from_callback.py  simple_token_getter.py
tests/: test_production.py
utils/: database.py  i18n.py  logger.py
