[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "auth*", "config*", "moodtape_core*", "utils*"]

[project]
name = "moodtape"
version = "0.1.0"
description = "Telegram bot that creates music playlists based on emotional descriptions"
authors = [
    {name = "Moodtape Team", email = "team@moodtape.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot[webhooks]>=20.6",
    "openai>=1.57.0",  # Обновил до последней версии, совместимой с httpx 0.28+
    "spotipy==2.23.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "PyJWT==2.8.0",
    "cryptography==42.0.8",
    "APScheduler==3.10.4",
    "httpx>=0.27.0,<0.29.0",  # Зафиксировал совместимую версию httpx
    "pydantic>=2.0.0",        # Добавляем явную зависимость от pydantic 2.x
    "pydantic-settings>=2.0.0"  # Добавляем pydantic-settings для BaseSettings
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/moodtape/moodtape"
Repository = "https://github.com/moodtape/moodtape"
Issues = "https://github.com/moodtape/moodtape/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
] 